--- a/style/style.css
+++ b/style/style.css
@@ -26,12 +26,34 @@ a{
 	color: #222;
 }
 
-.conteiner {
+.container {
 	display: flex;
 	justify-content: space-between;
 	max-width: 960px;
 	margin: 0 auto;
 	position: relative;
+}
+
+.btn {
+	display: block;
+	line-height: 0.75em;
+	border-radius: 1.5em;
+	padding: 0.75em 1em;
+	background-color: #00d47f;
+	box-shadow: inset 0 -0.07em rgba(1, 1, 1, 0.15);
+	color: #fffefe;
+	border: 1px solid rgba(1, 1, 1, 0);
+	
+}
+
+.btn:hover {
+	border: 1px solid rgba(1, 1, 1, 0.3);
+	text-decoration: underline;
+}
+
+.btn:active {
+	box-shadow: inset 1px 1px rgba(1, 1, 1, 0.5);
+	opacity: 0.75;
 }
 
 header {
@@ -48,8 +70,10 @@ header {
 	0 1 1 rgba(1, 1, 1, 0.2);
 	background:  #d9dfe8 linear-gradient(to right, 
 		rgba(123, 219, 237, 0.5), rgba(174, 232, 243, 0.5));
+	position: fixed;
+	z-index: 10;
 }
-.top .conteiner {
+.top .container {
 	min-height: 100px;
 }
 .logo {
@@ -318,31 +342,154 @@ header {
 	opacity: 0.75;
 }
 
-.btn {
+.create {
+	display: none;
+}
+
+.sing {
+	display: none;
+}
+.user-account {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(70, 94, 123, 0.5);
+	z-index: 11;
+	justify-content: center;
+	-ms-align-items: center;
+	align-items: center;
+}
+
+
+
+.create-an-account,
+.sing-in {
+	min-width: 30%;
+	min-height: 70%;
+	background-color: #fff;
+	border-radius: 10px;
+}
+
+.user-account-header {
+	position: relative;
+	width: 100%;
+	text-transform: uppercase;
+	text-align: center;
+	background-color: #c6d1e1;
+	padding: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	color: #fff;
+	text-shadow: 0 0 3px rgba(1, 1, 1, 0.3);
+}
+
+.user-account-header img {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	cursor: pointer;
+	opacity: 0.7;
+}
+
+.user-account-header img:hover {
+	opacity: 1;
+}
+
+.user-account-header img:active {
+	opacity: 0.7;
+}
+
+.user-account form {
+	text-align: center;
+	color: #bbbbbb;
+	padding: 20px;
+}
+
+h4 {
+	font-size: 12px;
+}
+
+.user-account input {
 	display: block;
-	line-height: 0.75em;
-	border-radius: 1.5em;
-	padding: 0.75em 1em;
-	background-color: #00d47f;
-	box-shadow: inset 0 -0.07em rgba(1, 1, 1, 0.15);
-	color: #fffefe;
-	border: 1px solid rgba(1, 1, 1, 0);
+	width: 100%;
+	margin: 20px 0;
+	padding: 10px;
 	
 }
 
-.btn:hover {
-	border: 1px solid rgba(1, 1, 1, 0.3);
+.user-account .input > input {
+	padding-left: 40px;
+	color: #9d9c9c;
+	border-radius: 5px;
+}
+
+.user-account .input {
+	position: relative;
+}
+
+.user-account .input::before {
+	display: block;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 20px;
+	height: 20px;
+}
+
+.user-account .text::before {
+	content: url(../img/sing-in.png);
+}
+
+.user-account .email::before {
+	content: url(../img/email.png);
+	padding: 3px 0;
+}
+
+.user-account .password::before {
+	content: url(../img/KEY.png);
+}
+
+.user-account input[type="submit"] {
+	font-size: 20px;
+	padding-left: 10px;
+	text-shadow: 0 0 3px rgba(1, 1, 1, 0.3);
+	
+}
+
+.already-have {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	-ms-align-items: center;
+	align-items: center;
+	padding: 0 20px 10px;
+	font-size: 12px;
+	color: #9d9c9c;
+}
+
+.already-have a {
+	text-shadow: 0 0 1px rgba(1, 1, 1, 0.3);
+	background-color: #5e8dc3;
+}
+
+.sing-in .already-have a {
+	background-color: #fff;
+	color: #9d9c9c;
+}
+
+.sing-in .already-have a:hover {
 	text-decoration: underline;
 }
 
-.btn:active {
-	box-shadow: inset 1px 1px rgba(1, 1, 1, 0.5);
-	opacity: 0.75;
+.sing-in .already-have a:active {
+	opacity: 0.7;
 }
 
-
-
 header nav {
+	padding-top: 100px;
 	width: 100%;
 	min-height: 60px;
 	background-color: #f7f7f7;
@@ -451,13 +598,13 @@ h1 {
 	background-color: #eff3f7;
 }
 
-.icons .conteiner {
+.icons .container {
 	/*align-items: baseline;*/
 	min-height: 440px;
 	position: relative;
 }
 
-.icons .conteiner::after {
+.icons .container::after {
 	content: "";
 	position: absolute;
 	display: block;
@@ -519,7 +666,7 @@ h1 {
 
 
 
-.work .conteiner {
+.work .container {
 	min-height: 390px;
 }
 
@@ -542,7 +689,7 @@ h2 {
  	border-bottom: 1px solid #7bdbed;
  }
 
-.work .conteiner div {
+.work .container div {
 	position: relative;
 	width: 50%;
 	padding: 30px 10px;
@@ -618,7 +765,7 @@ h2 {
 
 
 
-.about .conteiner {
+.about .container {
 	min-height: 330px;
 	-webkit-flex-direction: column;
 	-moz-flex-direction: column;
@@ -724,7 +871,7 @@ h2 {
 	background-size: auto 100%;
 }
 
-.plan .conteiner {
+.plan .container {
 	min-height: 756px;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -863,7 +1010,7 @@ h2 {
 	transform: scale(-1);
 }
 
- .news .conteiner {
+ .news .container {
  	min-height: 240px;
  	border-bottom: 1px solid #e2e2e2;
  	align-items: flex-start;
@@ -923,7 +1070,7 @@ h2 {
 
 
 
-.testimonials.conteiner {
+.testimonials.container {
  	min-height: 485px;
  	padding-top: 50px;
  }
@@ -932,7 +1079,7 @@ h2 {
 	width: 230px;
 }
 
- .testimonials .conteiner {
+ .testimonials .container {
  	max-width: 660px;
  	margin: 0;
  	min-height: 255px;
@@ -1000,7 +1147,7 @@ h2 {
 	background: url('../img/quotes.png') no-repeat;
 }
 
- .testimonials form.conteiner {
+ .testimonials form.container {
  	max-width: 230px;
  	margin: 0;
  	min-height: 255px;
@@ -1073,11 +1220,11 @@ h2 {
 	 rgba(110, 216, 232, 0.2) 50%, rgba(240, 210, 24, 0.2)) 100%;
 }
 
-.encryption .conteiner {
+.encryption .container {
 	min-height: 260px;
 }
 
-.encryption .conteiner div {
+.encryption .container div {
 	width: 50%;
 }
 
@@ -1189,7 +1336,7 @@ footer {
 	background-color: #34495e;
 }
 
-footer .conteiner {
+footer .container {
 	min-height: 260px;
 	padding-top: 30px;
 }
@@ -1296,13 +1443,13 @@ footer .company p:last-of-type {
 	background-color: #e4e4e4;
 }
 
-.footer-bottom-conteiner {
+.footer-bottom-container {
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
-	width: 960px;
+	max-width: 960px;
 	-ms-align-items: center;
 	align-items: center;
 	justify-content: space-between;
@@ -1368,4 +1515,8 @@ footer .company p:last-of-type {
 
 .terms li:active a {
 	opacity: 0.75;
+}
+
+@media screen and (max-width: 768px) {
+	
 }
